feat.新增允许用户申请新的用户激活码
fix #41
